Travis: reverting open jdk usage attempts